--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,11 +148,26 @@ li {
   font-size: 36px;
   background-color: #00c564;
   color: #fff;
-  border: none;
+  border: 2px solid #00c564;
   border-radius: 10px;
   letter-spacing: 2px;
   font-weight: 700;
+  position: relative;
 }
+
+.submit:hover {
+  background-color: #000;
+  color: #00c564;
+}
+
+/*
+.submit:after {
+  content: '';
+  background: url("../images/white-arrow.svg") no-repeat center center;
+  background-size: cover;
+  position: absolute;
+  top: 50%;
+}*/
 
 .banner-content label {
   padding-bottom: 15px;
@@ -183,6 +198,7 @@ h2 {
 
 .download ul {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
 }
 
@@ -197,7 +213,7 @@ h2 {
 }
 
 .download li .arrow {
-  width: 60px;
+  width: 12%;
   height: 40px;
   margin-top: 15px;
   display: inline-block;
@@ -214,4 +230,78 @@ h2 {
   padding-top: 25px;
   padding-right: 3%;
   display: inline-block;
+}
+
+/*Footer section styling start ---------*/
+footer {
+  padding: 37px 0;
+  background-color: #222322;
+  text-align: center;
+}
+
+footer a {
+  color: #fff;
+  font-size: 14px;
+  letter-spacing: .3px;
+}
+
+footer a:hover {
+  color: #00c564;
+}
+
+footer a:after {
+  content: '|';
+  padding: 0 5px;
+}
+
+footer a:hover + a:after {
+  color: #fff;
+}
+
+footer li:last-child a:after {
+  display: none;
+}
+
+/*Media queries  */
+@media screen and (max-width: 1280px) {
+  .banner-content {
+     margin-bottom: 50px;
+     flex-basis: 100%;
+  }
+
+  .banner figure {
+    flex-basis: 100%;
+  }
+
+  .submit {
+    padding: 25px;
+    width: 50%;
+  }
+
+  .download li {
+    margin-bottom: 20px;
+    flex-basis: 100%;
+    justify-content: center;
+  }
+
+  .download {
+    padding-bottom: 50px;
+  }
+
+  .download li figure {
+    width: 60px;
+    height: 60px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .banner h2 {
+    font-size: 38px;
+  }
+
+  .submit {
+    font-size: 30px;
+    padding: 20px 40px;
+    width: auto;
+  }
 }
