To the top functionality done

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,10 +82,15 @@ sub { bottom: -.25em; }
 .cf { *zoom: 1; }
 
 /*for all*/
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   -webkit-box-sizing: border-box;
     box-sizing: border-box;
   font-family: sans-serif;
+  scroll-behavior: smooth;
 }
 
 a { 
@@ -161,11 +166,6 @@ li {
   letter-spacing: 2px;
   font-weight: 700;
   position: relative;
-}
-
-.submit:hover {
-  background-color: #000;
-  color: #00c564;
 }
 
 .banner-content label {
@@ -252,16 +252,9 @@ footer a {
   letter-spacing: .3px;
 }
 
-footer a:hover {
-  color: #00c564;
-}
-
 footer a:after {
   content: '|';
   padding: 0 5px;
-}
-
-footer a:hover + a:after {
   color: #fff;
 }
 
@@ -282,13 +275,16 @@ footer .to-the-top {
   transition: .5s;
 }
 
-footer .to-the-top:hover {
-  -webkit-filter: grayscale(1);
-    filter: grayscale(1);
-}
-
 footer img {
   border-radius: 50%;
+}
+
+.disBlock {
+  display: block;
+}
+
+.disNone {
+  display: none;
 }
 
 /*popup styling*/
@@ -305,20 +301,16 @@ footer img {
   font-weight: 700;
 }
 
-.popup-wrap button:hover {
-  background-color: #00c564;
-  border-color: #000;
-  color: #000;
-}
-
 .popup-wrap {
   display: none;
   position: fixed;
   top: 0;
   left: 50%;
-  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%);
   width: 30%;
-  padding: 50px 40px;
+  padding: 50px 5%;
   background: #00c564;
 }
 
@@ -329,13 +321,17 @@ footer img {
 .right-popup {
   right: 0;
   left: unset;
-  transform: none;
+  -webkit-transform: none;
+      -ms-transform: none;
+          transform: none;
 }
 
 .left-popup {
   left: 0;
   right: unset;
-  transform: none;
+  -webkit-transform: none;
+      -ms-transform: none;
+          transform: none;
 }
 
 .center-popup {
@@ -345,6 +341,33 @@ footer img {
 
 .close-popup {
   display: none;
+}
+
+/*Adding hover effect only after 1024 */
+@media screen and (min-width: 1024px) {
+  .submit:hover {
+    background-color: #000;
+    color: #00c564;
+  }
+
+  footer a:hover {
+    color: #00c564;
+  }
+
+  footer a:hover + a:after {
+    color: #fff;
+  }
+
+  footer .to-the-top:hover {
+    -webkit-filter: grayscale(1);
+      filter: grayscale(1);
+  }
+
+  .popup-wrap button:hover {
+    background-color: #00c564;
+    border-color: #000;
+    color: #000;
+  }
 }
 
 /*Media queries  */
@@ -387,6 +410,11 @@ footer img {
 @media screen and (max-width: 767px) {
   .banner h2 {
     font-size: 38px;
+  }
+
+  .popup-wrap {
+    width: 55%;
+    padding: 40px 5%;
   }
 
   .submit {
