--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,18 +154,36 @@ li {
   padding: 0 19.5px;
 }
 
-.submit {
-  width: 88%;
-  padding: 36px 0;
+.submit-form-group {
+      width: 88%;
+      border-radius: 10px;
   margin-top: 20px;
-  font-size: 36px;
+  position: relative;
+  display: inline-block;
+  vertical-align: top;
   background-color: #00c564;
+}
+
+.submit-form-group span {
+  width: 40px;
+  right: 15px;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.submit {
+  width: 100%;
+  height: 100%;
+  padding: 36px 0;
+  font-size: 36px;
   color: #fff;
   border: 2px solid #00c564;
   border-radius: 10px;
   letter-spacing: 2px;
   font-weight: 700;
   position: relative;
+  background-color: #00c564;
 }
 
 .banner-content label {
@@ -418,8 +436,8 @@ footer img {
   }
 
   .submit {
-    font-size: 30px;
-    padding: 20px 40px;
+    font-size: 25px;
+    padding: 20px 7%;
     width: auto;
   }
 
