--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -322,6 +322,7 @@ footer img {
 .popup-wrap {
   display: none;
   position: fixed;
+  border: 1px solid #000;
   top: 0;
   left: 50%;
   -webkit-transform: translateX(-50%);
@@ -355,6 +356,19 @@ footer img {
 .center-popup {
   top: 0;
   left: 50%;
+}
+
+.center-bottom-popup {
+  top: unset;
+  bottom: 0;
+}
+
+.all-center-popup {
+  top: 50%;
+  left: 50%;
+  right: unset;
+  bottom: unset;
+  transform: translate(-50%,-50%);
 }
 
 .close-popup {
